--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "karma-coffee-preprocessor": "^0.2.1",
     "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "^0.1.5"
+  },
+  "scripts": {
+    "start": "cd build && ss --config ../superstatic.json --port 8080 --host 127.0.0.1"
   }
 }
