Implemented a simple subtractive synthesizer!

--- a/bower.json
+++ b/bower.json
@@ -3,10 +3,13 @@
   "version": "0.3.2",
   "devDependencies": {
     "angular": "~1.4.6",
+    "angular-animate": "~1.4.6",
     "angular-mocks": "~1.2",
     "bootstrap": "~3.3.5",
     "angular-bootstrap": "~0.13.4",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "angular-resource": "~1.4.6",
+    "angular-awesome-slider": "~2.4.2"
   },
   "dependencies": {}
 }
